Fixed pagination colour issue on mobile

--- a/client/src/scss/news.scss
+++ b/client/src/scss/news.scss
@@ -140,8 +140,10 @@
 					border-radius: 100%;
 				}
 
-				&:hover {
-					color: $claret;
+				@media #{$desktop-only} {
+					&:hover {
+						color: $claret;
+					}
 				}
 			}
 		}
